@@ -299,6 +299,12 @@ enum {
 //
 // SlideInL
 //
+
+// The adjust factor is needed to prevent issue #442
+// One solution is to use DONT_RENDER_IN_SUBPIXELS images, but NO
+// The other issue is that in some transitions (and I don't know why)
+// the order should be reversed (In in top of Out or vice-versa).
+#define ADJUST_FACTOR 0.5f
 @implementation SlideInLTransition
 -(void) onEnter
 {
@@ -307,44 +313,52 @@ enum {
 	[self initScenes];
 	
 	IntervalAction *in = [self action];
-	IntervalAction *out = [in copy];
+	IntervalAction *out = [self action];
 
-	[inScene runAction: [EaseOut actionWithAction:in rate:2.0f]];
-	[outScene runAction: [Sequence actions:
-				   [EaseOut actionWithAction:out rate:2.0f],
-				   [CallFunc actionWithTarget:self selector:@selector(finish)],
-				   nil] ];
+	id inAction = [EaseOut actionWithAction:in rate:2.0f];
+	id outAction = [Sequence actions:
+					[EaseOut actionWithAction:out rate:2.0f],
+					[CallFunc actionWithTarget:self selector:@selector(finish)],
+					nil];
 	
-	[out release];
+	[inScene runAction: inAction];
+	[outScene runAction: outAction];
 }
-
--(IntervalAction*) action
+-(void) sceneOrder
 {
-	CGSize s = [[Director sharedDirector] winSize];
-	return [MoveBy actionWithDuration:duration position:ccp(s.width,0)];
+	inSceneOnTop = NO;
 }
-
 -(void) initScenes
 {
 	CGSize s = [[Director sharedDirector] winSize];
-	[inScene setPosition: ccp( -s.width,0) ];
+	[inScene setPosition: ccp( -(s.width-ADJUST_FACTOR),0) ];
 }
+-(IntervalAction*) action
+{
+	CGSize s = [[Director sharedDirector] winSize];
+	return [MoveBy actionWithDuration:duration position:ccp(s.width-ADJUST_FACTOR,0)];
+}
+
 @end
 
 //
 // SlideInR
 //
 @implementation SlideInRTransition
+-(void) sceneOrder
+{
+	inSceneOnTop = YES;
+}
 -(void) initScenes
 {
 	CGSize s = [[Director sharedDirector] winSize];
-	[inScene setPosition: ccp( s.width,0) ];
+	[inScene setPosition: ccp( s.width-ADJUST_FACTOR,0) ];
 }
 
 -(IntervalAction*) action
 {
 	CGSize s = [[Director sharedDirector] winSize];
-	return [MoveBy actionWithDuration:duration position:ccp(-s.width,0)];
+	return [MoveBy actionWithDuration:duration position:ccp(-(s.width-ADJUST_FACTOR),0)];
 }
 
 @end
@@ -353,16 +367,20 @@ enum {
 // SlideInT
 //
 @implementation SlideInTTransition
+-(void) sceneOrder
+{
+	inSceneOnTop = NO;
+}
 -(void) initScenes
 {
 	CGSize s = [[Director sharedDirector] winSize];
-	[inScene setPosition: ccp(0,s.height) ];
+	[inScene setPosition: ccp(0,s.height-ADJUST_FACTOR) ];
 }
 
 -(IntervalAction*) action
 {
 	CGSize s = [[Director sharedDirector] winSize];
-	return [MoveBy actionWithDuration:duration position:ccp(0,-s.height)];
+	return [MoveBy actionWithDuration:duration position:ccp(0,-(s.height-ADJUST_FACTOR))];
 }
 
 @end
@@ -371,16 +389,21 @@ enum {
 // SlideInB
 //
 @implementation SlideInBTransition
+-(void) sceneOrder
+{
+	inSceneOnTop = YES;
+}
+
 -(void) initScenes
 {
 	CGSize s = [[Director sharedDirector] winSize];
-	[inScene setPosition: ccp(0,-s.height) ];
+	[inScene setPosition: ccp(0,-(s.height-ADJUST_FACTOR)) ];
 }
 
 -(IntervalAction*) action
 {
 	CGSize s = [[Director sharedDirector] winSize];
-	return [MoveBy actionWithDuration:duration position:ccp(0,s.height)];
+	return [MoveBy actionWithDuration:duration position:ccp(0,s.height-ADJUST_FACTOR)];
 }
 @end
 
