@@ -204,6 +204,11 @@ Class restartTransition()
 		bg1.anchorPoint = CGPointZero;
 		[self addChild:bg1 z:-1];
 
+		Label* title = [Label labelWithString:transitions[sceneIdx] fontName:@"Thonburi" fontSize:40];
+		[self addChild:title];
+		[title setColor:ccc3(255,32,32)];
+		[title setPosition: ccp(x/2, y-100)];
+
 		Label* label = [Label labelWithString:@"SCENE 1" fontName:@"Marker Felt" fontSize:64];
 		[label setColor:ccc3(16,16,255)];
 		[label setPosition: ccp(x/2,y/2)];	
@@ -232,24 +237,27 @@ Class restartTransition()
 }
 -(void) nextCallback:(id) sender
 {
+	Class transition = nextTransition();
 	Scene *s2 = [Scene node];
 	[s2 addChild: [TextLayer2 node]];
-	[[Director sharedDirector] replaceScene: [nextTransition() transitionWithDuration:1.2f scene:s2]];
+	[[Director sharedDirector] replaceScene: [transition transitionWithDuration:1.2f scene:s2]];
 
 }	
 
 -(void) backCallback:(id) sender
 {
+	Class transition = backTransition();
 	Scene *s2 = [Scene node];
 	[s2 addChild: [TextLayer2 node]];
-	[[Director sharedDirector] replaceScene: [backTransition() transitionWithDuration:1.2f scene:s2]];
+	[[Director sharedDirector] replaceScene: [transition transitionWithDuration:1.2f scene:s2]];
 }	
 
 -(void) restartCallback:(id) sender
 {
+	Class transition = restartTransition();
 	Scene *s2 = [Scene node];
 	[s2 addChild: [TextLayer2 node]];
-	[[Director sharedDirector] replaceScene: [restartTransition() transitionWithDuration:1.2f scene:s2]];
+	[[Director sharedDirector] replaceScene: [transition transitionWithDuration:1.2f scene:s2]];
 }	
 -(void) onEnter
 {
@@ -285,6 +293,11 @@ Class restartTransition()
 		bg2.anchorPoint = CGPointZero;
 		[self addChild:bg2 z:-1];
 		
+		Label* title = [Label labelWithString:transitions[sceneIdx] fontName:@"Thonburi" fontSize:40];
+		[self addChild:title];
+		[title setColor:ccc3(255,32,32)];
+		[title setPosition: ccp(x/2, y-100)];		
+		
 		Label* label = [Label labelWithString:@"SCENE 2" fontName:@"Marker Felt" fontSize:64];
 		[label setColor:ccc3(16,16,255)];
 		[label setPosition: ccp(x/2,y/2)];
@@ -309,23 +322,26 @@ Class restartTransition()
 
 -(void) nextCallback:(id) sender
 {
+	Class transition = nextTransition();
 	Scene *s2 = [Scene node];
 	[s2 addChild: [TextLayer node]];
-	[[Director sharedDirector] replaceScene: [nextTransition() transitionWithDuration:1.2f scene:s2]];
+	[[Director sharedDirector] replaceScene: [transition transitionWithDuration:1.2f scene:s2]];
 }	
 
 -(void) backCallback:(id) sender
 {
+	Class transition = backTransition();
 	Scene *s2 = [Scene node];
 	[s2 addChild: [TextLayer node]];
-	[[Director sharedDirector] replaceScene: [backTransition() transitionWithDuration:1.2f scene:s2]];
+	[[Director sharedDirector] replaceScene: [transition transitionWithDuration:1.2f scene:s2]];
 }	
 
 -(void) restartCallback:(id) sender
 {
+	Class transition = restartTransition();
 	Scene *s2 = [Scene node];
 	[s2 addChild: [TextLayer node]];
-	[[Director sharedDirector] replaceScene: [restartTransition() transitionWithDuration:1.2f scene:s2]];
+	[[Director sharedDirector] replaceScene: [transition transitionWithDuration:1.2f scene:s2]];
 }
 -(void) step:(ccTime)dt
 {
